# fzd

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  flake.nix  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml  republish.yml
shell/: fzd.fish
src/: app.rs  event.rs  fs.rs  fuzzy.rs  main.rs  store.rs  ui.rs  update.rs
